test_suite/tests/ui/compat/func_marker_sealed.rs
use funcmap::FuncMarker;

enum T {}

impl FuncMarker<T> for T {}

fn main() {}